force-app/main/default/objects/Legal_Advisor__c/Legal_Advisor__c.object-meta.xml
<CustomObject>
    <label>Legal Advisor</label>
    <nameField>
        <label>Legal Advisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Advisors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>