force-app/main/default/objects/Legal_Advisor__c/fields/AmountOfClients__c.field-meta.xml
<CustomField>
    <fullName>AmountOfClients__c</fullName>
    <label>AmountOfClients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>