force-app/main/default/objects/Legal_Advisor__c/fields/Legal_Advisor_Clients__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advisor_Clients__c</fullName>
    <label>Legal Advisor Clients</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Legal_Advisor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>