force-app/main/default/objects/Legal_Advisor__c/validationRules/Account_Number_Must_Be_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Must_Be_Read_Only</fullName>
    <active>true</active>
    <description>Checks if an account number has changed.</description>
    <errorConditionFormula>ISCHANGED(Account_Number__c)</errorConditionFormula>
    <errorMessage>The account number field cannot be changed.</errorMessage>
</ValidationRule>